@ollion/flow-engineering-icon package added

--- a/packages/storybook/stories/icons.stories.mdx
+++ b/packages/storybook/stories/icons.stories.mdx
@@ -44,3 +44,13 @@ import { html } from "lit-html";
 <f-divider></f-divider>
 
 <Story name="AWS Icons">{() => html`<aws-icons></aws-icons>`}</Story>
+
+<br />
+
+## Flow Engineering Icons `@ollion/flow-engineering-icon`
+
+<f-divider></f-divider>
+
+<Story name="Flow Engineering Icons">
+  {() => html`<flow-eng-icons></flow-eng-icons>`}
+</Story>
